crates/swath-render/tests/snapshots/ir_snapshots__ndvi_plan_json_shape.snap
---
source: crates/swath-render/tests/ir_snapshots.rs
expression: ndvi_plan()
---
{
  "inputs": [
    {
      "name": "nir"
    },
    {
      "name": "red"
    }
  ],
  "ops": [
    {
      "BandMath": {
        "Binary": {
          "op": "Div",
          "lhs": {
            "Binary": {
              "op": "Sub",
              "lhs": {
                "Band": "nir"
              },
              "rhs": {
                "Band": "red"
              }
            }
          },
          "rhs": {
            "Binary": {
              "op": "Add",
              "lhs": {
                "Band": "nir"
              },
              "rhs": {
                "Band": "red"
              }
            }
          }
        }
      }
    },
    {
      "Rescale": {
        "min": -1.0,
        "max": 1.0
      }
    },
    {
      "Colormap": "RdYlGn"
    }
  ],
  "output": {
    "format": "Png"
  }
}
