crates/swath-render/tests/snapshots/ir_snapshots__tiny_eval_rgba_bytes.snap
---
source: crates/swath-render/tests/ir_snapshots.rs
expression: "(tile.width, tile.height, tile.pixels)"
---
(
    4,
    4,
    [
        165,
        0,
        38,
        255,
        165,
        0,
        38,
        255,
        165,
        0,
        38,
        255,
        0,
        0,
        0,
        0,
        254,
        254,
        189,
        255,
        0,
        0,
        0,
        0,
        254,
        254,
        189,
        255,
        254,
        254,
        189,
        255,
        183,
        224,
        117,
        255,
        183,
        224,
        117,
        255,
        183,
        224,
        117,
        255,
        183,
        224,
        117,
        255,
        134,
        203,
        102,
        255,
        134,
        203,
        102,
        255,
        134,
        203,
        102,
        255,
        134,
        203,
        102,
        255,
    ],
)
