crates/swath-render/tests/snapshots/ir_snapshots__truecolor_plan_json_shape.snap
---
source: crates/swath-render/tests/ir_snapshots.rs
expression: truecolor_plan()
---
{
  "inputs": [
    {
      "name": "b04"
    },
    {
      "name": "b03"
    },
    {
      "name": "b02"
    }
  ],
  "ops": [
    {
      "Composite": {
        "r": "b04",
        "g": "b03",
        "b": "b02"
      }
    },
    {
      "Rescale": {
        "min": 0.0,
        "max": 3000.0
      }
    }
  ],
  "output": {
    "format": "Png"
  }
}
