crates/swath-render/tests/snapshots/ir_snapshots__udf_plan_json_shape.snap
---
source: crates/swath-render/tests/ir_snapshots.rs
expression: udf_plan()
---
{
  "inputs": [
    {
      "name": "nir"
    },
    {
      "name": "red"
    }
  ],
  "ops": [
    {
      "Udf": {
        "code_hash": "cafe0000000000000000000000000000000000000000000000000000000000ff",
        "output_planes": 1,
        "params": {
          "scale": 2.5
        }
      }
    },
    {
      "Rescale": {
        "min": -1.0,
        "max": 1.0
      }
    }
  ],
  "output": {
    "format": "Png"
  }
}
